mule-user-guide/v/3.4/mule-expression-language-date-and-time-functions.adoc
= Mule Expression Language Date and Time Functions

This reference page provides lists and brief explanations of the date and time functions in MEL. For explanatory information, see link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule Expression Language], link:/mule-user-guide/v/3.4/mule-expression-language-basic-syntax[MEL Basic Syntax], and the http://www.mulesoft.org/documentation/display/current/Mule+Expression+Language+Examples[MEL examples].

== Assumptions

This document assumes you are familiar with link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule Expression Language (MEL)].  Further, this document assumes you are using Mule 3.4.0 or later. 

== Obtaining the Server Time

You can obtain the current date and time of the server using the context object *server* and one of the following fields: 

* dateTime
* nanoTime

For example, the following expression returns the date and time of the server:  `#[server.dateTime]`

You can further specify the data you wish to extract using the following quantifiers:

* milliseconds
* seconds
* minutes
* hours 
* dayOfWeek
* dayOfMonth
* dayOfYear
* weekOfMonth
* weekOfYear
* month
* year

The following table describes operations you can perform with dateTime. The sections below offer details on how to use the operations in MEL expressions.

[width="100%",cols="50%,50%",options="header",]
|===
|Action |Operations
|*<<Obtain dateTime>>* a|
* dateTime
* nanoTime

|*<<Create New dateTime Instance>>* a|
* default constructor
* calendar
* date
* XMLGregorianCalendar
* iso860
* formatted string

|*<<Compute Relative Dates>>* a|
* plusMilliSeconds
* plusSeconds
* plusMinutes
* plusHours
* plusDays
* plusWeeks
* plusMonths
* plusYears

|*link:/mule-user-guide/v/3.4/mule-expression-language-date-and-time-functions[compare]* a|
* compared for equality using the == operator
* isBefore
* isAfter

|*access timezones* a|
* withTimeZone
* changeTimeZone(timezone)
* timeZone
* withLocale(localeAsString);

|*<<Format Strings>>* a|
* format()
* format(String pattern)

|*<<Transform>>* a|
* toCalendar
* toDate
* toXMLCalendar

|===

== Obtain dateTime

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|ContextObject.Field |Description |Return Type |Example
|server.dateTime |Current system date and time in a dateTime object that simplifies the parsing/formatting and very basic manipulation of dates via the Mule expression language. |org.mule.el.datetime.DateTime a|`#[server.dateTime]`
|server.nanoTime() |Current system time in nanoseconds. Equivalent to http://docs.oracle.com/javase/7/docs/api/java/lang/System.html#nanoTime()[System.nanoTime()] and has the same limitations, i.e., should be used only to measure elapsed time, etc. |int a|`#[server.nanoTime()]`
|===

=== Access Partial dateTime Information

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Qualifier |Description |Return Type |Example
|milliSeconds |Returns the number of milliseconds in the current second. +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.MILLISECOND)] |long a|`#[payload = (1000 - server.dateTime.milliSeconds) + ' to the next second.';]`
|seconds |Returns the number of seconds passed in the current minute (0 to 59). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.SECOND)] |int a|`#[payload = (60 - server.dateTime.seconds) + ' to the next minute.';]`
|minutes |Returns the number of minutes passed in the current hour (0 to 59). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.MINUTE)] |int a|`#[payload = (60 - server.dateTime.minutes) + ' to the next hour.';]`
|hours |Returns the number of hours passed in the current day (0 - 24). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.HOUR_OF_DAY)]  |int a|`#[payload = (24 - server.dateTime.hours) + ' to the next day.';]`
|dayOfWeek a|
Returns one of the following integer values:

Calendar.SUNDAY = 1, Calendar.MONDAY = 2, Calendar.TUESDAY = 3, Calendar.WEDNESDAY = 4, Calendar.THURSDAY = 5, Calendar.FRIDAY = 6, Calendar.SATURDAY = 7;

Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.DAY_OF_WEEK)]

 |int a|`#[if (server.dateTime.dayOfMonth == 1) {
  payload = 'Paycheck!!!';
}]`
|dayOfMonth |Returns the day of the month (1 to 31). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.DAY_OF_MONTH)] |int a|`#[if (server.dateTime.dayOfMonth == 1) {
  payload = 'Paycheck!!!';
}]`
|dayOfYear |Returns the day of the year (1 to 366). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.DAY_OF_YEAR)]  |int a|`#[if (server.dateTime.dayOfYear == 1) {
  payload = "Happy New Year!!!";
}]`
|weekOfMonth |Returns the week of the month (1 to 5). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.DAY_OF_MONTH)] |int a|`#[if (server.dateTime.weekOfMonth == 1) {
  payload = "Happy New Year!!!";
}]`
|weekOfYear |Returns the week of the year (1 - 53) +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.WEEK_OF_YEAR)] |int a|`#[if (server.dateTime.weekOfMonth == 1) {
  payload = "Happy New Year!!!";
}]`
|month |Returns the month of the year (1 - 12) +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.MONTH)] + 1 |int a|`#[if (server.dateTime.month == 12) {
  payload = 'Christmas!!!';
}]`
|year |Returns the the year (for example, 2013). +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get(Calendar.YEAR)] |int a|`#[if (server.dateTime.year == 1979) {
  payload = 'Year of good wine and programmers.';
}]`
|===

== Create New dateTime Instance

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Function |Description |Example
|DateTime() |Constructs a dateTime with the current time and the time zone and locale of the server. a|`#[payload = new org.mule.el.datetime.DateTime();]`
|DateTime(calendar, locale)
a|Constructs a dateTime with the calendar and locale specified.
[cols=",",options="header",]
!===
!Argument !Type
!calendar !java.util.Calendar
!locale !java.util.Locale
!===
a|`#[calendar = Calendar.getInstance();
locale = org.apache.commons.lang.LocaleUtils.toLocale('en_GB');
payload = new org.mule.el.datetime.DateTime(calendar, locale);]`
|DateTime(calendar)
a|Constructs a dateTime with the calendar specified and the locale of the server.
[cols=",",options="header",]
!===
!Argument !Type
!calendar !java.util.Calendar
!===
a|`#[calendar = Calendar.getInstance();
payload = new org.mule.el.datetime.DateTime(calendar);]`
|DateTime(calendar)
a|Constructs a dateTime with the calendar specified and the locale of the server.  
[cols=",",options="header",]
!====
!Argument !Type
!calendar !javax.xml.datatype.XMLGregorianCalendar
!====
a|`#[calendar = javax.xml.datatype.DatatypeFactory
.newInstance().newXMLGregorianCalendar();`
 
`payload = new org.mule.el.datetime.DateTime(calendar);]`
|DateTime(date)
a|Constructs a dateTime with the specified date and the locale and time zone of the server.
[cols=",",options="header",]
!===
!Argument !Type
!date !java.util.Date
!===
a|`#[payload = new org.mule.el.datetime.DateTime(new Date());]`
|DateTIme(iso8601String)
a|Construct a dateTime using the specified http://en.wikipedia.org/wiki/ISO_8601[iso8601] date.
[cols=",",options="header",]
!===
!Argument !Type
!iso8601String !java.lang.String
!===
a|`#[payload = new org.mule.el.datetime.DateTime('1994-11-05T08:15:30-05:00');]`
|DateTime(String dateString, String format)
a|Constructs a dateTime used a string containing a date time in the specified format. The format should be http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html[SimpleDateFormat] compatible.
[cols=",",options="header",]
!===
!Argument !Type
!dateString !java.lang.String
!string !java.lang.String
!===
Throws exception: ParseException
a|`#[dateString = new Date().toString();`
 
`payload = new org.mule.el.datetime.DateTime(dateString, 'EEE MMM dd HH:mm:ss zzz yyyy');]`
|===

== Compute Relative Dates

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Functions |Description |Return Type
|plusMilliSeconds(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.MILLISECOND, add);]  |dateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1)
|plusSeconds(int add) a|
Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.SECOND, add);]

 |as above
|plusMinutess(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.MINUTE, add);] |as above
|plusHours(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.HOUR_OF_DAY, add);] |as above
|plusDays(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.DAY_OF_YEAR, add);] |as above
|plusWeeks(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). |as above
|plusMonths(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.MONTH, add);] |as above
|plusYears(int add) |Returns the dateTime with the given amount of days added (or subtracted if it is a negative value). +
Equivalent to: http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add(Calendar.YEAR, add);]|as above
|===

*Example*

[source, code, linenums]
----
#[payload = 'Two days ago it was the ' + server.dateTime.plusDays(-2).dayOfWeek + 'st day of the week';]
----

== Compare

[width="100%",cols="25%,25%,25%,25%",options="header",]
|====
|Function |Description |Return Type |Example
|isBefore(ortherInstant) |Returns whether this Calendar represents a time before the instant represented by the specified argument. +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#before(java.lang.Object)[calendar.before(otherInstant);]   |boolean a|`#[if (server.dateTime.isBefore(expiryOfSomething)) {
  payload =  'Not Yet Expired';
}]`
|isAfter(otherInstant) |Returns whether this Calendar represents a time after the instant represented by the specified argument. +
Equivalent to http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#after(java.lang.Object)[calendar.after(otherInstant);]  |boolean a|`#[if (server.dateTime.isAfter(expiryOfSomething)) {
  payload =  'Expired';
}]`
|====

*Access Timezones*

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Function |Description |Return Type |Example
|withTimeZone(timezone);
a|Changes the current dateTime to match a defined timezone. Effectively changing the dateTime and the timezone of the instance.
[cols=",",options="header",]
!===
!Argument !Type
!timezone !String compatible with  http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone%28java.lang.String%29[TimeZone.getTimeZone()]
!===
|dateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|`#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]`
 
``#[phoenixInstant = server.dateTime.withTimeZone('America/Phoenix');]`
|changeTimeZone(timezone)
a|Changes the timezone of the instance. Effectively changing only the timezone of the instance.
[cols=",",options="header",]
!===
!Argument !Type
!timezone !String compatible with http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone%28java.lang.String%29[TimeZone.getTimeZone()]
!===
|dateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|`#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]`
 
`#[phoenixInstant = server.dateTime.changeTimeZone('America/Phoenix');]`
|timeZone |Returns the current timeZone of the dateTime instance. |string +
A http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone(java.lang.String)[TimeZone.getTimeZone()] compatible string. a|`#[payload = server.dateTime.timeZone]`
|withLocale(localeAsString);
a|This method takes the string format of a locale and creates the locale object from it.
[cols=",",options="header",]
!===
!Argument !Type
!localAsString !String. The language code must be lowercase. The country code must be uppercase. The separator must be an underscore. The length must be correct.
!===
|dateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|`#[payload = server.dateTime.withLocale('en_GB');]`
|===

== Format Strings

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Function |Description |Return Type |Example
|format() |Formats the instance in a string with the http://www.w3.org/TR/xmlschema-2/#isoformats[ISO8601] date time format. |string a|`#[payload = server.dateTime.format()]`
|format(String pattern)
a|Formats the instance in a specific format.
[cols=",",options="header",]
!====
!Argument !Type
!pattern !String. Compatible with http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html[SimpleDateFormat]
!====
|string +
A representation of the instance using the specified format. a|`#[payload = server.dateTime.format(&quot;yyyy.MM.dd G 'at' HH:mm:ss z&quot;)]`
|===

[WARNING]
====
When writing in Studio's XML editor, you cannot use double quotes to express String literals, because MEL expressions already appear enclosed in double quotes in configuration files. Instead, you can either:

* use single quotes                     (`'expression'`)
* escape quotes with &quot;      (`&quot;expression&quot;`)
* escape quotes with \u0027      (`\u0027expression\u0027`)

If you're writing on Studio's visual editor, double quotes will be transformed into escaped quotes` (&quot;`) in the XML view.
====

== Transform

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Function |Description |Return Type |Example
|toCalendar() |Returns a Java Calendar representation of the dateTime instance. |Calendar a|`#[payload = server.dateTime.toCalendar()]`
|toDate() |Returns a Java Date representation of the datetime instance. |java.util.Date a|`#[payload = server.dateTime.toDate()]`
|toXMLCalendar() a|Returns a XMLCalendar representation of the datetime instance.

Throws:  DatatypeConfigurationException

|XMLGregorianCalendar a|`#[payload = server.dateTime.toXMLCalendar()]`
|===

== See Also

* Learn more about the link:/mule-user-guide/v/3.4/mule-expression-language-mel[Mule Expression Language (MEL)].
