mule-user-guide/v/3.7/mule-expression-language-date-and-time-functions.adoc
= Mule Expression Language Date and Time Functions
:keywords: anypoint studio, esb, mel, mule expression language, native language, custom language, expression, mule expressions

This reference page provides lists and brief explanations of the date and time functions in MEL. 

For more information, see:

* link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language]
* link:/mule-user-guide/v/3.7/mule-expression-language-basic-syntax[Mule Expression Language Basic Syntax]
* link:/mule-user-guide/v/3.7/mule-expression-language-examples[Mule Expression Language Examples]

== Prerequisites

This document assumes you are familiar with link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language (MEL)].  Further, this document assumes you are using Mule 3.4.0 or newer. 

== Obtaining the Server Time

You can obtain the current date and time of the server using the context object *server* and one of the following fields: 

* dateTime
* nanoTime

For example, the following expression returns the date and time of the server:  `#[server.dateTime]`

You can further specify the data you wish to extract using the following quantifiers:

* milliseconds
* seconds
* minutes
* hours 
* dayOfWeek
* dayOfMonth
* dayOfYear
* weekOfMonth
* weekOfYear
* month
* year

The following table describes operations you can perform with dateTime. The sections below offer details on how to use the operations in MEL expressions.

[width="100%",cols="50%,50%",options="header",]
|===
|Action |Operations
|*<<Obtain DateTime>>* a|
* dateTime
* nanoTime

|*create a new DateTime instance* a|
* default constructor
* calendar
* date
* XMLGregorianCalendar
* iso860
* formatted string

|*<<Compute Relative Dates>>* a|
* plusMilliSeconds
* plusSeconds
* plusMinutes
* plusHours
* plusDays
* plusWeeks
* plusMonths
* plusYears

|*link:/mule-user-guide/v/3.7/mule-expression-language-date-and-time-functions[compare]* a|
* compared for equality using the == operator
* isBefore
* isAfter

|*access timezones* a|
* withTimeZone
* changeTimeZone(timezone)
* timeZone
* withLocale(localeAsString);

|*<<Format Strings>>* a|
* format()
* format(String pattern)

|*<<Transform>>* a|
* toCalendar
* toDate
* toXMLCalendar

|===

== Obtain DateTime

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|ContextObject.Field |Description |Return Type |Example
|server.dateTime |Current system date and time in a DateTime object that simplifies the parsing/formatting and very basic manipulation of dates via the Mule expression language. |org.mule.el.datetime.DateTime a|
[source, code]
----
#[server.dateTime]
----
|server.nanoTime() |Current system time in nanoseconds. Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/lang/System.html#nanoTime--[System.nanoTime()] and has the same limitations. Only use this to measure elapsed time, etc. |int a|
[source, code]
----
#[server.nanoTime()]
----

|===

=== Access Partial DateTime Information

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Qualifier |Description |Return Type |Example
|milliSeconds |Returns the number of milliseconds in the current second. +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.MILLISECOND)] |long a|
[source, code]
----
#[payload = (1000 - server.dateTime.milliSeconds) + ' to the next second.';]
----

|seconds |Returns the number of seconds passed in the current minute (0 to 59). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.SECOND)] |int a|
[source, code]
----
#[payload = (60 - server.dateTime.seconds) + ' to the next minute.';]
----

|minutes |Returns the number of minutes passed in the current hour (0 to 59). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.MINUTE)] |int a|
[source, code]
----
#[payload = (60 - server.dateTime.minutes) + ' to the next hour.';]
----

|hours |Returns the number of hours passed in the current day (0 - 24). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.HOUR_OF_DAY)]  |int a|
[source, code]
----
#[payload = (24 - server.dateTime.hours) + ' to the next day.';]
----

|dayOfWeek a|Returns one of the following integer values:

Calendar.SUNDAY = 1, Calendar.MONDAY = 2, Calendar.TUESDAY = 3, Calendar.WEDNESDAY = 4, Calendar.THURSDAY = 5, Calendar.FRIDAY = 6, Calendar.SATURDAY = 7;

Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.DAY_OF_WEEK)]

|int a|
[source, code, linenums]
----
#[if (server.dateTime.dayOfWeek == Calendar.FRIDAY) {
  message.payload = 'TGIF';
}]
----

|dayOfMonth |Returns the day of the month (1 to 31). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.DAY_OF_MONTH)] |int a|
[source, code, linenums]
----
#[if (server.dateTime.dayOfMonth == 1) {
  payload = 'Paycheck!!!';
}]
----

|dayOfYear |Returns the day of the year (1 to 366). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.DAY_OF_YEAR)]  |int a|
[source, code, linenums]
----
#[if (server.dateTime.dayOfYear == 1) {
  payload = "Happy New Year!!!";
}]
----

|weekOfMonth |Returns the week of the month (1 to 5). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.DAY_OF_MONTH)] |int a|
[source, code, linenums]
----
#[if (server.dateTime.weekOfMonth == 1) {
  payload = "Happy New Year!!!";
}]
----

|weekOfYear |Returns the week of the year (1 - 53) +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.WEEK_OF_YEAR)] |int a|
[source, code, linenums]
----
#[if (server.dateTime.weekOfYear == 2) {
  payload = 'Stop saying happy new year!!!';
}]
----

|month |Returns the month of the year (1 - 12) +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.MONTH)] + 1 |int a|
[source, code, linenums]
----
#[if (server.dateTime.month == 12) {
  payload = 'Christmas!!!';
}]
----

|year |Returns the the year (for example, 2013). +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get(Calendar.YEAR)] |int a|
[source, code, linenums]
----
#[if (server.dateTime.year == 1979) {
  payload = 'Year of good wine and programmers.';
}]
----

|===

== Create New DateTime Instance

[width="100%",cols=",",options="header",]
|===
|Function |Description |Example
|DateTime() a|Constructs a DateTime with the current time and the time zone and locale of the server.
a|
[source, code]
----
#[payload = new org.mule.el.datetime.DateTime();]
----

|DateTime(calendar, locale) a|
Constructs a DateTime with the calendar and locale specified.
[%header,cols="2*"]
!===
!Argument !Type
!calender !java.util.Calendar
!locale !java.util.Calendar
!===
a|
[source, code, linenums]
----
#[calendar = Calendar.getInstance();
locale = org.apache.commons.lang.LocaleUtils.toLocale('en_GB');
payload = new org.mule.el.datetime.DateTime(calendar, locale);]
----

|DateTime(calendar) a|
Constructs a DateTime with the calendar specified and the locale of the server.
[%header,cols="2*"]
!===
!Argument !Type
!calender !java.util.Calendar
!===
a|
[source, code, linenums]
----
#[calendar = Calendar.getInstance();
payload = new org.mule.el.datetime.DateTime(calendar);]
----

|DateTime(calendar) a|
Constructs a DateTime with the calendar specified and the locale of the server.  
[%header,cols="2*"]
!===
!Argument !Type
!calender !javax.xml.datatype.XMLGregorianCalendar
!===
a|
[source, code, linenums]
----
#[calendar = javax.xml.datatype.DatatypeFactory
.newInstance().newXMLGregorianCalendar();
 
payload = new org.mule.el.datetime.DateTime(calendar);]
----

|DateTime(date) a|
Constructs a DateTime with the specified date and the locale and time zone of the server.
[%header,cols="2*"]
!===
!Argument !Type
!date !java.util.Date
!===
a|
[source, code]
----
#[payload = new org.mule.el.datetime.DateTime(new Date());]
----

|DateTIme(iso8601String) a|
Construct a DateTime using the specified link:http://en.wikipedia.org/wiki/ISO_8601[iso8601] date.
[%header,cols="2*"]
!===
!Argument !Type
!iso8601String !java.lang.String
!===
a|
[source, code]
----
#[payload = new org.mule.el.datetime.DateTime('1994-11-05T08:15:30-05:00');]
----

|DateTime(String dateString, String format) a|
Constructs a DateTime used a string containing a date time in the specified format. The format should be link:http://docs.oracle.com/javase/8/docs/api/java/text/SimpleDateFormat.html[SimpleDateFormat] compatible.
[%header,cols="2*"]
!===
!Argument !Type
!dateString !java.lang.String
!string !java.lang.String
!===


Throws exception: ParseException

a|
[source, code, linenums]
----
#[dateString = new Date().toString();
 
payload = new org.mule.el.datetime.DateTime(dateString, 'EEE MMM dd HH:mm:ss zzz yyyy');]
----

|===

== Compute Relative Dates

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Functions |Description |Return Type
|plusMilliSeconds(int add) |Returns the DateTime with the given amount of milliseconds added (or subtracted if it is a negative value). +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.MILLISECOND, add);]  |DateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1)
|plusSeconds(int add) a|
Returns the DateTime with the given amount of seconds added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.SECOND, add);]

 |DateTime
|plusMinutes(int add) |Returns the DateTime with the given amount of minutes added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.MINUTE, add);] |DateTime
|plusHours(int add) |Returns the DateTime with the given amount of hours added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.HOUR_OF_DAY, add);] |DateTime
|plusDays(int add) |Returns the DateTime with the given amount of days added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.DAY_OF_YEAR, add);] |DateTime
|plusWeeks(int add) |Returns the DateTime with the given amount of weeks added (or subtracted if it is a negative value). |DateTime
|plusMonths(int add) |Returns the DateTime with the given amount of months added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.MONTH, add);] |DateTime
|plusYears(int add) |Returns the DateTime with the given amount of years added (or subtracted if it is a negative value).  +
Equivalent to: link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add(Calendar.YEAR, add);] http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[// public abstract void add(int field,int amount)] |DateTime
|===

*Example*

[source, code]
----
#[payload = 'Two days ago it was the ' + server.dateTime.plusDays(-2).dayOfWeek + 'st day of the week';]
----

== Compare

[width="100%",cols="25%,25%,25%,25%",options="header",]
|====
|Function |Description |Return Type |Example
|isBefore(ortherInstant) |Returns whether this Calendar represents a time before the instant represented by the specified argument. +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#before-java.lang.Object-[calendar.before(otherInstant);]   |boolean a|
[source, code, linenums]
----
#[if (server.dateTime.isBefore(expiryOfSomething)) {
  payload =  'Not Yet Expired';
}]
----

|isAfter(otherInstant) |Returns whether this Calendar represents a time after the instant represented by the specified argument. +
Equivalent to link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#after-java.lang.Object-[calendar.after(otherInstant);]  |boolean a|
[source, code, linenums]
----
#[if (server.dateTime.isAfter(expiryOfSomething)) {
  payload =  'Expired';
}]
----

|====


*Access Timezones*

[width="100%",cols="25%,25%,25%,25%",options="header",]
|====
|Function |Description |Return Type |Example
|withTimeZone(timezone); a|
Changes the current DateTime to match a defined timezone. Effectively changing the dateTime and the timezone of the instance.
[%header,cols="2*"]
!===
!Argument !Type
!timezone !String compatible with link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone()]
!===

|DateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|
[source, code, linenums]
----
#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]
 
#[phoenixInstant = server.dateTime.withTimeZone('America/Phoenix');]
----

|changeTimeZone(timezone) a|
Changes the timezone of the instance. Effectively changing only the timezone of the instance.
[%header,cols="2*"]
!===
!Argument !Type
!timezone !String compatible with link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone()]
!===


|DateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|
[source, code, linenums]
----
#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]
 
#[phoenixInstant = server.dateTime.changeTimeZone('America/Phoenix');]
----

|timeZone |Returns the current TimeZone of the dateTime instance. |string +
A link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone()] compatible string. a|
[source, code]
----
#[payload = server.dateTime.timeZone]
----

|withLocale(localeAsString); a|
This method takes the string format of a locale and creates the locale object from it.
[%header,cols="2*"]
!===
!Argument !Type
!localAsString !String. The language code must be lowercase. The country code must be uppercase. The separator must be an underscore. The length must be correct.
!===


|DateTime +
This allows chaining: server.dateTime.plusWeeks(1).plusDays(1) a|
[source, code]
----
#[payload = server.dateTime.withLocale('en_GB');]
----

|====

== Format Strings

[width="100%",cols="25%,25%,25%,25%",options="header"]
|===
|Function |Description |Return Type |Example
|format() |Formats the instance in a string with the link:http://www.w3.org/TR/xmlschema-2/#isoformats[ISO8601] date time format. |string a|
[source, code]
----
#[payload = server.dateTime.format()]
----

|format(String pattern) a|
Formats the instance in a specific format.
[%header,cols="2*"]
!===
!Argument !Type
!pattern !String compatible with link:http://docs.oracle.com/javase/8/docs/api/java/text/SimpleDateFormat.html[SimpleDateFormat]
!===


|string +
A representation of the instance using the specified format. a|
[source, code]
----
#[payload = server.dateTime.format(&quot;yyyy.MM.dd G 'at' HH:mm:ss z&quot;)]
----
|===

[WARNING]
====
When writing in Studio's XML editor, you cannot use double quotes to express String literals, because MEL expressions already appear enclosed in double quotes in configuration files. Instead, you can either:

* Use single quotes              (`'expression'`)
* Escape quotes with &quot;      (`&quot;expression&quot;`)
* Escape quotes with \u0027      (`\u0027expression\u0027`)

If you're writing on Studio's visual editor, double quotes transform into escaped quotes` (&quot;`) in the XML view.
====

== Transform

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Function |Description |Return Type |Example
|toCalendar() |Returns a Java Calendar representation of the dateTime instance. |Calendar a|
[source, code]
----
#[payload = server.dateTime.toCalendar()]
----

|toDate() |Returns a Java Date representation of the datetime instance. |java.util.Date a|
[source, code]
----
#[payload = server.dateTime.toDate()]
----

|toXMLCalendar() a|
Returns a XMLCalendar representation of the datetime instance.

Throws:  DatatypeConfigurationException

|XMLGregorianCalendar a|
[source, code]
----
#[payload = server.dateTime.toXMLCalendar()]
----
|===

== See Also

* Learn more about the link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language (MEL)].
